--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,3 +21,8 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn clean install
+    - name: Upload JAR file
+      uses: actions/upload-artifact@v4
+      with:
+        name: jar-files
+        path: target
